<resources>
    <string name="abl_logo">ABL Logo</string>
    <string name="about_the_app">About the App</string>
    <string name="app_name">Android Baseball League</string>
    <string name="app_short_name">ABL</string>
    <string name="games_back_abbr">GB</string>
    <string name="in_abl">in ABL</string>
    <string name="last_ten_abbr">L10</string>
    <string name="leaders">Leaders</string>
    <string name="losses_l">L</string>
    <string name="percentage_abbr">PCT</string>
    <string name="players">Players</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="settings">Settings</string>
    <string name="standings">Standings</string>
    <string name="streak_abbr">STRK</string>
    <string name="team_logo">Team Logo</string>
    <string name="teams">Teams</string>
    <string name="view_roster">View Roster</string>
    <string name="wins_w">W</string>
</resources>