<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="divisionName"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightGray"
        android:padding="8dp">

        <TextView
            android:id="@+id/headerDivisionName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{divisionName}"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="EAST" />

        <TextView
            android:id="@+id/headerWins"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/wins_w"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/headerLosses"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/headerLosses"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/losses_l"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/headerWinPercentage"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/headerWinPercentage"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/percentage_abbr"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/headerGamesBack"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/headerGamesBack"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/games_back_abbr"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/headerLastTen"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/headerLastTen"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/last_ten_abbr"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/headerStreak"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/headerStreak"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/streak_abbr"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
